# any

./: CMakeLists.txt  README.md  test_any.cpp
src/: CMakeLists.txt
src/include/libany/: any.h
src/libany/: CMakeLists.txt
src/libany/include/libany/: any.h
src/libanyboost/: CMakeLists.txt
src/libanyboost/include/libanyboost/: any.h  any_boost.h
test/: CMakeLists.txt  test_any.cpp
test/common/: CpuTimer.h
test/test_any/: CMakeLists.txt  test_any.cpp
test/test_any_boost/: CMakeLists.txt  test_any_boost.cpp
